--- a/css/fontello-codes.css
+++ b/css/fontello-codes.css
@@ -2,6 +2,7 @@
 .icon-ok:before { content: '\e800'; } /* '' */
 .icon-home:before { content: '\e801'; } /* '' */
 .icon-info-circled:before { content: '\e802'; } /* '' */
+.icon-play:before { content: '\e803'; } /* '' */
 .icon-building:before { content: '\f0f7'; } /* '' */
 .icon-sun:before { content: '\f185'; } /* '' */
 .icon-angellist:before { content: '\f209'; } /* '' */
