--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?21272403');
-  src: url('../font/fontello.eot?21272403#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?21272403') format('woff2'),
-       url('../font/fontello.woff?21272403') format('woff'),
-       url('../font/fontello.ttf?21272403') format('truetype'),
-       url('../font/fontello.svg?21272403#fontello') format('svg');
+  src: url('../font/fontello.eot?12620251');
+  src: url('../font/fontello.eot?12620251#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?12620251') format('woff2'),
+       url('../font/fontello.woff?12620251') format('woff'),
+       url('../font/fontello.ttf?12620251') format('truetype'),
+       url('../font/fontello.svg?12620251#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?21272403#fontello') format('svg');
+    src: url('../font/fontello.svg?12620251#fontello') format('svg');
   }
 }
 */
@@ -57,6 +57,7 @@
 .icon-ok:before { content: '\e800'; } /* '' */
 .icon-home:before { content: '\e801'; } /* '' */
 .icon-info-circled:before { content: '\e802'; } /* '' */
+.icon-play:before { content: '\e803'; } /* '' */
 .icon-building:before { content: '\f0f7'; } /* '' */
 .icon-sun:before { content: '\f185'; } /* '' */
 .icon-angellist:before { content: '\f209'; } /* '' */
