--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?12620251');
-  src: url('../font/fontello.eot?12620251#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?12620251') format('woff2'),
-       url('../font/fontello.woff?12620251') format('woff'),
-       url('../font/fontello.ttf?12620251') format('truetype'),
-       url('../font/fontello.svg?12620251#fontello') format('svg');
+  src: url('../font/fontello.eot?89195018');
+  src: url('../font/fontello.eot?89195018#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?89195018') format('woff2'),
+       url('../font/fontello.woff?89195018') format('woff'),
+       url('../font/fontello.ttf?89195018') format('truetype'),
+       url('../font/fontello.svg?89195018#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?12620251#fontello') format('svg');
+    src: url('../font/fontello.svg?89195018#fontello') format('svg');
   }
 }
 */
@@ -58,6 +58,14 @@
 .icon-home:before { content: '\e801'; } /* '' */
 .icon-info-circled:before { content: '\e802'; } /* '' */
 .icon-play:before { content: '\e803'; } /* '' */
+.icon-book-open:before { content: '\e804'; } /* '' */
+.icon-plus:before { content: '\e805'; } /* '' */
+.icon-commerical-building:before { content: '\e811'; } /* '' */
+.icon-police:before { content: '\e82b'; } /* '' */
+.icon-comment-empty:before { content: '\f0e5'; } /* '' */
+.icon-user-md:before { content: '\f0f0'; } /* '' */
 .icon-building:before { content: '\f0f7'; } /* '' */
 .icon-sun:before { content: '\f185'; } /* '' */
+.icon-tree:before { content: '\f1bb'; } /* '' */
 .icon-angellist:before { content: '\f209'; } /* '' */
+.icon-shopping-bag:before { content: '\f290'; } /* '' */
